<?xml version="1.0" encoding="utf-8"?>
<tabs>

    <tab
        id="@+id/home"
        title="@string/tab_home"
        barColorWhenSelected="@color/lightGreen"
        icon="@drawable/ic_home"
        />

    <tab
        id="@+id/explore"
        title="@string/tab_explore"
        barColorWhenSelected="@color/teal"
        icon="@drawable/ic_explore"
        />

    <tab
        id="@+id/camera"
        title="@string/tab_camera"
        barColorWhenSelected="@color/black"
        icon="@drawable/ic_camera"
        />

    <tab
        id="@+id/irrigation"
        title="@string/tab_irrigation"
        barColorWhenSelected="@color/blue"
        icon="@drawable/ic_water"
        />

    <tab
        id="@+id/report"
        title="@string/tab_report"
        barColorWhenSelected="@color/red"
        icon="@drawable/ic_report"
        />

</tabs>