<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.view.fragments.PlanFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/BannerLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/BannerImageHeigt"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/BannerImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/examplecardimage" />

                <LinearLayout
                    android:id="@+id/BannerTitles"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="#53292929"
                    android:gravity="center"
                    android:padding="@dimen/padding"
                    >

                    <TextView
                        android:id="@+id/BannerTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/BannerTitle"
                        android:text="@string/BannerTitle"/>

                    <TextView
                        android:id="@+id/BannerCTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textStyle="italic"
                        android:textSize="@dimen/BannerCTitle"
                        android:text="@string/BannerCTitle"/>

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:orientation="vertical"
                android:background="@color/backgroundBanner">

                <TextView
                    android:id="@+id/BannerDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/TextNormal"
                    android:textStyle="bold"
                    android:paddingTop="@dimen/padding"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="@dimen/padding"
                    android:text="@string/BannerDescription"/>

                <TextView
                    android:id="@+id/BannerDescriptionContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/TextSmall"
                    android:padding="@dimen/padding"
                    android:text="@string/BannerDescriptionContent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:orientation="vertical"
                android:background="@color/backgroundBanner">

                <TextView
                    android:id="@+id/BannerTaxonomia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/TextNormal"
                    android:textStyle="bold"
                    android:paddingTop="@dimen/padding"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="@dimen/padding"
                    android:text="@string/BannerTaxonomia"/>

                <TextView
                    android:id="@+id/BannerTaxonomiaContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/TextSmall"
                    android:padding="@dimen/padding"
                    android:text="@string/BannerTaxonomiaContent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:orientation="vertical"
                android:background="@color/backgroundBanner">

                <TextView
                    android:id="@+id/BannerAplicacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/TextNormal"
                    android:textStyle="bold"
                    android:paddingTop="@dimen/padding"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="@dimen/padding"
                    android:text="@string/BannerAplicacion"/>

                <TextView
                    android:id="@+id/BannerAplicacionContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/TextSmall"
                    android:padding="@dimen/padding"
                    android:text="@string/BannerAplicacionContent"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>