<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card-home"
    android:layout_width="match_parent"
    android:layout_height="@dimen/CardHeght"
    android:layout_margin="@dimen/padding"
    tools:ignore="ContentDescription">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/pictureCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/examplecardimage"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:id="@+id/cardTitles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#53292929"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <TextView
                android:id="@+id/titleCardHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CardTitle"
                android:textColor="@color/white"
                android:textSize="@dimen/title_card"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ctitleCardHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CardCTitle"
                android:textColor="@color/white"
                android:textSize="@dimen/ctitle_card"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/moreCardHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/CardRead"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </FrameLayout>

</android.support.v7.widget.CardView>